fix popup vertical align

--- a/css/style.css
+++ b/css/style.css
@@ -115,6 +115,10 @@ html.popuped body {
 	overflow:hidden;
 }
 
+.home {
+	height:100%;
+}
+
 /* Контейнер */
 
 .wrapper {
@@ -473,6 +477,7 @@ label.label-input.focused:after {
 	overflow-y:auto;
 	padding:10px;
 	text-align:center;
+	font-size:0;
 	-webkit-backface-visibility:hidden;
 	backface-visibility:hidden;
 }
@@ -482,7 +487,6 @@ label.label-input.focused:after {
 	vertical-align:middle;
 	height:100%;
 	content:'';
-	margin-right:-5px;
 }
 
 .popup .popup_content {
@@ -493,7 +497,6 @@ label.label-input.focused:after {
 	width:100%;
 	max-width:400px;
 	position:relative;
-	margin:0 -5px;
 	-webkit-box-shadow:0px 0px 25px rgba(0,0,0,0.5);
 	box-shadow:0px 0px 25px rgba(0,0,0,0.5);
 	-webkit-overflow-scrolling:touch;
